properly set up express modules

--- a/views/pages/main_page.ejs
+++ b/views/pages/main_page.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <script src="main_pageJS.js"></script>
-        <style type="main_pageCSS.css"></style>
+        <script src="/action.js"></script>
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
